Compucom CCQA Org 100919/src/objects/FCST_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Description__c</fullName>
        <label>Contract Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Owner(UNUSED)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FCST_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_Baseline_Created_Year_Integer__c</fullName>
        <formula>value(FCST_Contract_Created_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCST Baseline Created Year Integer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCST_Contract_Created_Year__c</fullName>
        <label>FCST Baseline Created Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_Q__c</fullName>
        <label>FCST Q#</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FCST Contracts</relationshipLabel>
        <relationshipName>FCST_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fcst_Geo_Name__c</fullName>
        <label>Fcst Geo Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Geo_Number__c</fullName>
        <label>Fcst Geo Number(UNUSED)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fcst_Geo_Numbers__c</fullName>
        <label>Fcst Geo Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Service_End_date__c</fullName>
        <label>Fcst Service End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fcst_Service_start_date__c</fullName>
        <label>Fcst Service start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>FCST Contracts</relationshipLabel>
        <relationshipName>FCST_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Source__c</fullName>
        <formula>IF(VALUE(FCST_Contract_Created_Year__c) &gt;=YEAR(TODAY()), &apos;New Sales&apos;, &apos;Backlog&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Source</label>
        <type>Text</type>
    </fields>
    <label>FCST Contract</label>
    <listViews>
        <fullName>All_Contract</fullName>
        <columns>NAME</columns>
        <columns>Contract__c</columns>
        <columns>Fcst_Account__c</columns>
        <columns>Contract_Description__c</columns>
        <columns>Contract_Owner__c</columns>
        <columns>FCST_Contract_Created_Year__c</columns>
        <columns>Fcst_Geo_Name__c</columns>
        <columns>Fcst_Geo_Number__c</columns>
        <columns>FCST_Q__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contract</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>FCST Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCST Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>